[Bug #21163] Fix hexadecimal float conversion